# product-visor

./: BARCODE_SCANNER_README.md  DATABASE_MIGRATION_INSTRUCTIONS.md  EVENT_DRIVEN_REFACTORING_SUMMARY.md  GRPC_REFACTORING_SUMMARY.md  HIBERNATE_AUTO_GENERATION.md  MICROSERVICES_SETUP.md  ORDER_SETUP_INSTRUCTIONS.md  PROJECT_ROADMAP.md  PYCHARM_SETUP_GUIDE.md  README.md  TELEGRAM_BOT_INTEGRATION.md  package-lock.json  package.json  pom.xml  test-order-event-example.json  vite.config.js
authorization-service/: Dockerfile  pom.xml
client/: Dockerfile  pom.xml
common-core/: CHANGELOG.md  CONFIGURATION_GUIDE.md  CONFIGURATION_INHERITANCE.md  CONFIGURATION_VERIFICATION.md  GRPC_ARCHITECTURE.md  GRPC_CLIENT_USAGE.md  GRPC_USAGE_EXAMPLES.md  KAFKA_TROUBLESHOOTING.md  README.md  SERVICE_PORTS.md  pom.xml
documents/: AUTHENTICATION_SETUP.md  ENCRYPTION_SETUP.md  EVENT_DRIVEN_ARCHITECTURE.md  MICROSERVICES_INTERACTION_MAP.md  SERVICE_PORTS.md  analysis_prompt.md  authorization-service.md  client.md  common-rules.md  order-service.md  ozon-service.md  product-visor-backend.md  project.md  refactor-plan.md  yandex-service.md
infra/: KAFKA_MONITORING_README.md  docker-compose.yml
library-marketplace/: README.md  pom.xml
ollama/: docker-compose.yml
python-bot/: .env  Dockerfile  QUICK_START.md  docker-compose.yml  env_example.txt  pyproject.toml  requirements.txt  run_bot.py  setup_env.py  test_utf8_kafka.py
python-bot/bot/: __main__.py  config.py  handlers.py  kafka_bus.py  machine_token.py  main.py  renderer.py  session.py
python-bot/bot/templates/: messages.yaml
(+501 files in other folders)
